# extract-variant

./: Cargo.toml  LICENSE  README.md  lib.md  tmp-readme.md
src/: extract_variant.rs  lib.rs  variant_of.rs
tests/: test.rs
variant-traits/: Cargo.toml
variant-traits/src/: lib.rs
