[package]
name = "variant-traits"
version = "0.1.0"
edition = "2021"
authors = ["Mainzu"]
description = "Traits for the extract-variant crate."
repository = "https://github.com/Mainzu/extract-variant/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
